Revert "Parse docker image spec with specs list"
This reverts commit 8fe41dd3b7fa5306ba8b62d660c002420adb9b23.